Add logout button to administration page.